# time_series

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  bootstrap.sh  configure  configure.in  const_series.f90  cumtstest1.f90  cumtstest1.gp  cumulative_time_series.f90  date_time_module.f90  datetest1.dsp  datetest1.f90  datetest1.mak  datetest2.dsp  datetest2.f90  datetest2.mak  fptrap-intel.f90  fptrap-null.f90  fptrap-win32.f90  fptraptest.dsp  fptraptest.f90  julian.f90  library.dsp  library.dsw  library.mak  met_time_series.f90  mettest1.f90  mettest1.gp  time_series.f90  tstest1.dsp  tstest1.f90  tstest1.mak  tstest2.dsp  tstest2.f90  (+3 more)
