#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Battelle Memorial Institute
# Pacific Northwest Laboratory
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: Fri Dec 10 08:34:15 2010 by William A. Perkins <d3g096@PE10900.pnl.gov>
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(julian.f90)
AM_INIT_AUTOMAKE(libts,0.1)

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------
# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_FC()
AC_PROG_F90()
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

FCFLAGS="$FCFLAGS $FCFLAGS_f90"
# -------------------------------------------------------------
# set appropriate flags for specified compiler
# -------------------------------------------------------------

AC_LANG(Fortran)

dnl AC_PROG_F77_WORKS


AC_OUTPUT(Makefile)
