#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Battelle Memorial Institute
# Pacific Northwest Laboratory
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: 2013-11-06 12:58:38 d3g096
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(julian.f90)
AM_INIT_AUTOMAKE(libts,0.1)
AM_MAINTAINER_MODE()

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------
# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_FC()
AC_PROG_F90()
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

FCFLAGS="$FCFLAGS $FCFLAGS_f90"
# -------------------------------------------------------------
# set appropriate flags for specified compiler
# -------------------------------------------------------------

AC_LANG(Fortran)

dnl AC_PROG_F77_WORKS


AC_OUTPUT(Makefile)
